--- a/module_2/tp/index.html
+++ b/module_2/tp/index.html
@@ -6,9 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script type="module" defer src="script.js"></script>
 </head>
 <body>
-
+    <h1>Quiz</h1>
+    <div id="quiz"></div>
+    <button id="submit">Valider la réponse</button>
 </body>
 </html>
